; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_dtrace_lazy_dofs_remove.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_dtrace.c_dtrace_lazy_dofs_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_11__*, i32* }
%struct.TYPE_11__ = type { i32, %struct.TYPE_12__* }
%struct.TYPE_12__ = type { i64 }

@EINVAL = common dso_local global i32 0, align 4
@dtrace_dof_mode_lock = common dso_local global i32 0, align 4
@dtrace_dof_mode = common dso_local global i64 0, align 8
@DTRACE_DOF_MODE_NEVER = common dso_local global i64 0, align 8
@DTRACE_DOF_MODE_LAZY_ON = common dso_local global i64 0, align 8
@KM_SLEEP = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4
@EACCES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*, i32)* @dtrace_lazy_dofs_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dtrace_lazy_dofs_remove(%struct.TYPE_10__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_11__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %3, align 8
  store i32 %1, i32* %4, align 4
  %12 = load i32, i32* @EINVAL, align 4
  store i32 %12, i32* %5, align 4
  %13 = call i32 @lck_rw_lock_shared(i32* @dtrace_dof_mode_lock)
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %17 = icmp eq %struct.TYPE_11__* %16, null
  br i1 %17, label %23, label %18

18:                                               ; preds = %2
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = icmp eq i32* %21, null
  br label %23

23:                                               ; preds = %18, %2
  %24 = phi i1 [ true, %2 ], [ %22, %18 ]
  %25 = zext i1 %24 to i32
  %26 = call i32 @ASSERT(i32 %25)
  %27 = load i64, i64* @dtrace_dof_mode, align 8
  %28 = load i64, i64* @DTRACE_DOF_MODE_NEVER, align 8
  %29 = icmp ne i64 %27, %28
  %30 = zext i1 %29 to i32
  %31 = call i32 @ASSERT(i32 %30)
  %32 = load i64, i64* @dtrace_dof_mode, align 8
  %33 = load i64, i64* @DTRACE_DOF_MODE_LAZY_ON, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %143

35:                                               ; preds = %23
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %36, i32 0, i32 1
  %38 = load i32*, i32** %37, align 8
  %39 = icmp eq i32* %38, null
  br i1 %39, label %40, label %143

40:                                               ; preds = %35
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %42 = call i32 @dtrace_sprlock(%struct.TYPE_10__* %41)
  %43 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %44 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %43, i32 0, i32 0
  %45 = load %struct.TYPE_11__*, %struct.TYPE_11__** %44, align 8
  store %struct.TYPE_11__* %45, %struct.TYPE_11__** %6, align 8
  %46 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %47 = icmp ne %struct.TYPE_11__* %46, null
  br i1 %47, label %48, label %140

48:                                               ; preds = %40
  %49 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %50 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  store i32 %51, i32* %8, align 4
  store i32 0, i32* %7, align 4
  br label %52

52:                                               ; preds = %136, %48
  %53 = load i32, i32* %7, align 4
  %54 = load i32, i32* %8, align 4
  %55 = icmp slt i32 %53, %54
  br i1 %55, label %56, label %139

56:                                               ; preds = %52
  %57 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %58 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %57, i32 0, i32 1
  %59 = load %struct.TYPE_12__*, %struct.TYPE_12__** %58, align 8
  %60 = load i32, i32* %7, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %59, i64 %61
  %63 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = trunc i64 %64 to i32
  %66 = load i32, i32* %4, align 4
  %67 = icmp eq i32 %65, %66
  br i1 %67, label %68, label %135

68:                                               ; preds = %56
  store %struct.TYPE_11__* null, %struct.TYPE_11__** %9, align 8
  %69 = load i32, i32* %8, align 4
  %70 = icmp sgt i32 %69, 1
  br i1 %70, label %71, label %126

71:                                               ; preds = %68
  %72 = load i32, i32* %8, align 4
  %73 = sub nsw i32 %72, 1
  store i32 %73, i32* %10, align 4
  %74 = load i32, i32* %10, align 4
  %75 = call i64 @DOF_IOCTL_DATA_T_SIZE(i32 %74)
  store i64 %75, i64* %11, align 8
  %76 = load i64, i64* %11, align 8
  %77 = load i32, i32* @KM_SLEEP, align 4
  %78 = call %struct.TYPE_11__* @kmem_alloc(i64 %76, i32 %77)
  store %struct.TYPE_11__* %78, %struct.TYPE_11__** %9, align 8
  %79 = load i32, i32* %10, align 4
  %80 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %81 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %80, i32 0, i32 0
  store i32 %79, i32* %81, align 8
  %82 = load i32, i32* %7, align 4
  %83 = icmp sgt i32 %82, 0
  br i1 %83, label %84, label %98

84:                                               ; preds = %71
  %85 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %86 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %85, i32 0, i32 1
  %87 = load %struct.TYPE_12__*, %struct.TYPE_12__** %86, align 8
  %88 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %87, i64 0
  %89 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %90 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %89, i32 0, i32 1
  %91 = load %struct.TYPE_12__*, %struct.TYPE_12__** %90, align 8
  %92 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %91, i64 0
  %93 = load i32, i32* %7, align 4
  %94 = sext i32 %93 to i64
  %95 = mul i64 %94, 4
  %96 = trunc i64 %95 to i32
  %97 = call i32 @bcopy(%struct.TYPE_12__* %88, %struct.TYPE_12__* %92, i32 %96)
  br label %98

98:                                               ; preds = %84, %71
  %99 = load i32, i32* %7, align 4
  %100 = load i32, i32* %8, align 4
  %101 = sub nsw i32 %100, 1
  %102 = icmp slt i32 %99, %101
  br i1 %102, label %103, label %125

103:                                              ; preds = %98
  %104 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %105 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %104, i32 0, i32 1
  %106 = load %struct.TYPE_12__*, %struct.TYPE_12__** %105, align 8
  %107 = load i32, i32* %7, align 4
  %108 = add nsw i32 %107, 1
  %109 = sext i32 %108 to i64
  %110 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %106, i64 %109
  %111 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %112 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %111, i32 0, i32 1
  %113 = load %struct.TYPE_12__*, %struct.TYPE_12__** %112, align 8
  %114 = load i32, i32* %7, align 4
  %115 = sext i32 %114 to i64
  %116 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %113, i64 %115
  %117 = load i32, i32* %8, align 4
  %118 = load i32, i32* %7, align 4
  %119 = sub nsw i32 %117, %118
  %120 = sub nsw i32 %119, 1
  %121 = sext i32 %120 to i64
  %122 = mul i64 %121, 4
  %123 = trunc i64 %122 to i32
  %124 = call i32 @bcopy(%struct.TYPE_12__* %110, %struct.TYPE_12__* %116, i32 %123)
  br label %125

125:                                              ; preds = %103, %98
  br label %126

126:                                              ; preds = %125, %68
  %127 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %128 = load i32, i32* %8, align 4
  %129 = call i64 @DOF_IOCTL_DATA_T_SIZE(i32 %128)
  %130 = call i32 @kmem_free(%struct.TYPE_11__* %127, i64 %129)
  %131 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %132 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %133 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %132, i32 0, i32 0
  store %struct.TYPE_11__* %131, %struct.TYPE_11__** %133, align 8
  %134 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %134, i32* %5, align 4
  br label %139

135:                                              ; preds = %56
  br label %136

136:                                              ; preds = %135
  %137 = load i32, i32* %7, align 4
  %138 = add nsw i32 %137, 1
  store i32 %138, i32* %7, align 4
  br label %52

139:                                              ; preds = %126, %52
  br label %140

140:                                              ; preds = %139, %40
  %141 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %142 = call i32 @dtrace_sprunlock(%struct.TYPE_10__* %141)
  br label %145

143:                                              ; preds = %35, %23
  %144 = load i32, i32* @EACCES, align 4
  store i32 %144, i32* %5, align 4
  br label %145

145:                                              ; preds = %143, %140
  %146 = call i32 @lck_rw_unlock_shared(i32* @dtrace_dof_mode_lock)
  %147 = load i32, i32* %5, align 4
  ret i32 %147
}

declare dso_local i32 @lck_rw_lock_shared(i32*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @dtrace_sprlock(%struct.TYPE_10__*) #1

declare dso_local i64 @DOF_IOCTL_DATA_T_SIZE(i32) #1

declare dso_local %struct.TYPE_11__* @kmem_alloc(i64, i32) #1

declare dso_local i32 @bcopy(%struct.TYPE_12__*, %struct.TYPE_12__*, i32) #1

declare dso_local i32 @kmem_free(%struct.TYPE_11__*, i64) #1

declare dso_local i32 @dtrace_sprunlock(%struct.TYPE_10__*) #1

declare dso_local i32 @lck_rw_unlock_shared(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
